--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -378,9 +378,19 @@ Income tax rates for individuals</h1>
 <div class="wb-fieldflow" data-wb-fieldflow="{&quot;inline&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;, &quot;reset&quot;: {&quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.province-display&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}}">
         
 	<ul>
-            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
-		  <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
-    </ul>
+          <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
+         <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
+          <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#manitoba&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Manitoba/li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#newBrunswick&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">New Brunswick</li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#newfoundlandAndLabrador&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Newfoundland and Labrador</li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#northwestTerritories&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Northwest Territories</li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
+	</ul>
 </div>
 
 	
@@ -391,70 +401,44 @@ Income tax rates for individuals</h1>
     <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value"></div>
 	</div>
 	
+	<div id="manitoba" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/manitoba/variations/2023/value"></div>
+	</div>
+	
+	<div id="newBrunswick" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/newBrunswick/variations/2023/value"></div>
+	</div>
+	<div id="newfoundlandAndLabrador" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/newfoundlandAndLabrador/variations/2023/value"></div>
+	</div>
+	<div id="northwestTerritories" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/northwestTerritories/variations/2023/value"></div>
+	</div>
+	
+	<div id="britishColumbia" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value"></div>
+	</div>
+	<div id="britishColumbia" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value"></div>
+	</div>
+	<div id="britishColumbia" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value"></div>
+	</div>
+	<div id="britishColumbia" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value"></div>
+	</div>
+	<div id="britishColumbia" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value"></div>
+	</div>
+	<div id="britishColumbia" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value"></div>
+	</div>
 	
 
-
-
-
-
-
 	
-	
-                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-british-columbia.html">British Columbia</a></li>
-                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-manitoba.html">Manitoba</a></li>
-                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-new-brunswick.html">New Brunswick</a></li>
-                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-newfoundland-labrador.html">Newfoundland and Labrador</a></li>
-                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/northwest-territories.html">Northwest Territories</a></li>
-                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-nova-scotia.html">Nova Scotia</a></li>
-                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/nunavut.html">Nunavut</a></li>
-                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-ontario.html">Ontario</a></li>
-                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-prince-edward-island.html">Prince Edward Island</a></li>
-                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-quebec.html">Quebec</a></li>
-                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-saskatchewan.html">Saskatchewan</a></li>
-                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/yukon.html">Yukon</a></li>
-                        </ul>
-                    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-	
-
-
 </div>
 <div class="mwsaccordion-html section">
-         
- <ul class="list-unstyled" id="details-elements-86397">
-
-
-    <li>
-                <details>
-                    <summary>Alberta</summary>
-                    <div class="mwsgeneric-base-html parbase section">
-    <div data-json-replace="#[income-tax-rates]/alberta/variations/2023/value"></div>
-</div>
- </details>
-            </li>
-
-
-   <li>
-                <details>
-                    <summary>British Columbia</summary>
-                    <div class="mwsgeneric-base-html parbase section">
-    <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value">
-</div>
-</div>
- </details>
-            </li>
+<ul class="list-unstyled" id="details-elements-86397">
 
 
     <li>
