--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -380,16 +380,17 @@ Income tax rates for individuals</h1>
 	<ul>
           <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
          <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
-          <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#manitoba&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Manitoba/li>
+          <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#manitoba&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Manitoba</li>
 	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#newBrunswick&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">New Brunswick</li>
 	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#newfoundlandAndLabrador&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Newfoundland and Labrador</li>
 	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#northwestTerritories&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Northwest Territories</li>
-	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
-	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
-	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
-	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
-	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
-	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#novaScotia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Nova Scotia</li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#nunavut&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Nunavut</li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#ontario&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Ontario</li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#princeEdwardIsland&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Prince Edward Island</li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#quebec&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Quebec</li>
+	 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#saskatchewan&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Saskatchewan</li>
+		 <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#yukon&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Yukon</li>
 	</ul>
 </div>
 
@@ -415,25 +416,27 @@ Income tax rates for individuals</h1>
     <div data-json-replace="#[income-tax-rates]/northwestTerritories/variations/2023/value"></div>
 	</div>
 	
-	<div id="britishColumbia" class="province-display hidden">
-    <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value"></div>
+	<div id="novaScotia" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/novaScotia/variations/2023/value"></div>
 	</div>
-	<div id="britishColumbia" class="province-display hidden">
-    <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value"></div>
+	<div id="nunavut" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/nunavut/variations/2023/value"></div>
 	</div>
-	<div id="britishColumbia" class="province-display hidden">
-    <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value"></div>
+	<div id="ontario" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/ontario/variations/2023/value"></div>
 	</div>
-	<div id="britishColumbia" class="province-display hidden">
-    <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value"></div>
+	<div id="princeEdwardIsland" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/princeEdwardIsland/variations/2023/value"></div>
 	</div>
-	<div id="britishColumbia" class="province-display hidden">
-    <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value"></div>
+	<div id="quebec" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/quebec/variations/2023/value"></div>
 	</div>
-	<div id="britishColumbia" class="province-display hidden">
-    <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value"></div>
+	<div id="saskatchewan" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/saskatchewan/variations/2023/value"></div>
 	</div>
-	
+		<div id="yukon" class="province-display hidden">
+    <div data-json-replace="#[income-tax-rates]/yukon/variations/2023/value"></div>
+	</div>
 
 	
 </div>
