--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -179,6 +179,7 @@
   <div class="mwsbodytext text parbase section">
     <h2 id="toc1">2023 - Federal rates</h2>
     <p>[Basic personal amount?]</p>
+	  <p>Testing testing testing</p>
     <br>
   </div>
   <div class="mwsgeneric-base-html parbase section">
