--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -179,7 +179,7 @@
   <div class="mwsbodytext text parbase section">
     <h2 id="toc1">2023 - Federal rates</h2>
     <p>[Basic personal amount?]</p>
-	  <p>Testing testing testing</p>
+	
     <br>
   </div>
   <div class="mwsgeneric-base-html parbase section">
@@ -258,10 +258,21 @@
     <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html">[T1 Income tax packages]</a></p>
     <br>
     <p>You should calculate the federal tax first, then calculate your provincial or territorial tax.</p>
-	  <p>You must add your federal tax amount and provincial or territorial tax amounts together to get your <strong>combined tax rate</strong>. This is the total tax you will pay for the tax year.</p>
+	  <p>You must add your federal tax amount and provincial or territorial tax amounts together to get your <strong>combined tax rate</strong>.</p>
+	  <p>Your combined tax rate is the total tax you will pay for the calendar year. Generally, most employers will deduct both federal income tax and provincial and territorial income tax directly from your pay.</p>
     <div class="row mrgn-bttm-lg">
       <div class="col-sm-6 col-md-5">
         <p>To calculate the tax:</p>
+<ol class="lst-spcd">
+    <li>Subtract the base amount from the taxable income</li>
+    <li>Multiply that result by the tax rate</li>
+    <li>Add that result to the tax</li>
+  </ol>
+
+
+
+
+	      
         <ul>
           <li>subtract the base amount from the taxable income</li>
         </ul>
