calc and examples

--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -277,8 +277,8 @@
           <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">($)</span></li>
           <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Tax rate</span></li>
           <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">($)</span></li>
-          <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-plus fa-lg"></span><span class="wb-inv">plus </span></span><span class="text-muted h5">Tax</span> </li>
-          <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">Tax amount owed</span><span class="fa-stack text-success pull-right"><span class="fas fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span></span></li>
+          <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-plus fa-lg"></span><span class="wb-inv">plus </span></span><span class="text-muted h5">Tax amount on tax rate</span> </li>
+          <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">Tax owed</span><span class="fa-stack text-success pull-right"><span class="fas fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span></span></li>
         </ul>
       </div>
     </div>
@@ -291,7 +291,7 @@
       <p>The federal tax Ellis owes is $7,350 ($7,350 + $0). </p>
       <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
         <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$49,000 (Taxable income)</span></li>
-        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv">minus </span></span><span class="h6">$0 (Base amount)</span> </li>
+        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">minus </span></span><span class="h6">$0 (Base amount)</span> </li>
         <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$49,000</span></li>
         <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">15% (Tax rate)</span></li>
         <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$7,350</span></li>
