--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -260,7 +260,7 @@
     <p>You should calculate the federal tax first, then calculate your provincial or territorial tax.</p>
 	  <p>You must add your federal tax amount and provincial or territorial tax amounts together to get your <strong>combined tax rate</strong>.</p>
 	  <p>Your combined tax rate is the total tax you will pay for the calendar year. Generally, most employers will deduct both federal income tax and provincial and territorial income tax directly from your pay.</p>
-    <div class="row mrgn-bttm-lg">
+    <div class="row mrgn-bttm-md">
       <div class="col-sm-6 col-md-5">
         <p>To calculate the tax:</p>
 <ol class="lst-spcd">
