--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -133,7 +133,7 @@
     <p>The Government of Canada sets the federal income tax rates for individuals. Each province and territory determines their own income tax rates.</p>
     <p>Provincial or territorial income tax rates apply <strong>in addition to</strong> federal income tax rates.</p>
     <p>Determine the total tax you will pay by identifying your taxable income threshold (tax bracket), using the different tax rates based on your location, and calculating your combined tax rate.</p>
-    <p>Taxable income is your income after various deductions, credits, and exemptions have been applied. It is line 26000 of your Income Tax and Benefit Return.</p>
+  
   </div>
   <div class="mwsinpagetoc section">
     <nav role="navigation">
@@ -178,14 +178,21 @@
 </script--></div>
   <div class="mwsbodytext text parbase section">
     <h2 id="toc1">2023 - Federal rates</h2>
-    <p>[Basic personal amount?]</p>
+	    <p>Identify your taxable income threshold.</p> 
+	  <p>Taxable income is your income after various deductions, credits, and exemptions have been applied. It is line 26000 of your Income Tax and Benefit Return.</p>
+	  <details>
+		  <summary>If your taxable income is below $15,000</summary>
+		  <p>The basic personal amount (BPA) is $15,000 for the 2023 tax year, and indexed for inflation for subsequent years.</p>
+		  <p>The BPA is a non-refundable tax credit that can be claimed by all individuals. The purpose of the BPA is to provide a <strong>full reduction</strong> from federal income tax to all individuals with taxable income <strong>below</strong> the BPA. It also provides a partial reduction to taxpayers with taxable income above the BPA.</p>
+	  </details>
+    <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/adjustment-personal-income-tax-benefit-amounts.html">How amounts are indexed to inflation</a></p>
+
 	
     <br>
   </div>
   <div class="mwsgeneric-base-html parbase section">
     <div data-json-replace="#[income-tax-rates]/federalRates/variations/2023/value"> </div>
-    <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/adjustment-personal-income-tax-benefit-amounts.html">How amounts are adjusted for inflation</a></p>
-  </div>
+     </div>
   <div class="mwsbodytext text parbase section">
     <h2 id="toc2">2023 - Provincial and territorial rates</h2>
     <p>Provincial and territorial tax rates vary across Canada.</p>
@@ -313,7 +320,7 @@
       </ul>
     </details>
     <details>
-      <summary>Example 2 - Calculation for 2023 combined tax rate (on taxable income of $67,000)</summary>
+      <summary class="max-content">Example 2 - Calculation for 2023 combined tax rate (on taxable income of $67,000)</summary>
       <p>In 2023, Amari lives in Nova Scotia and has a taxable income of $67,000. Amari’s tax calculation would be as follows:</p>
       <p class="h3">Federal tax</p>
       <p>The first $53,359 is taxed at 15% (the first tax threshold), which equals $8,003.85.</p>
