--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -181,7 +181,7 @@
 	    <p>Identify your taxable income threshold.</p> 
 	  <p>Taxable income is your income after various deductions, credits, and exemptions have been applied. It is line 26000 of your Income Tax and Benefit Return.</p>
 	  <details>
-		  <summary class="max-content">If your taxable income is below $15,000</summary>
+		  <summary class="max-content">If your taxable income is below $15,000 (basic personal amount)</summary>
 		  <p>The basic personal amount (BPA) is $15,000 for the 2023 tax year, and indexed for inflation for subsequent years.</p>
 		  <p>The BPA is a non-refundable tax credit that can be claimed by all individuals. The purpose of the BPA is to provide a <strong>full reduction</strong> from federal income tax to all individuals with taxable income <strong>below</strong> the BPA. It also provides a partial reduction to taxpayers with taxable income above the BPA.</p>
 	  </details>
