--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -303,22 +303,29 @@
         <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$49,000</span></li>
         <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">15% (Tax rate)</span></li>
         <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$7,350</span></li>
-        <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv">plus </span></span><span class="h6">$0 (Tax on 15%)</span> </li>
+        <li class="brdr-bttm"><span class="fa-li"><span class="h2">+</span><span class="wb-inv">plus </span></span><span class="h6">$0 (Tax on 15%)</span> </li>
         <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$7,350</strong> (Total federal tax owed)</span></li>
       </ul>
       <p class="h3">Provincial tax</p>
       <p>The first $53,359 is taxed at 15% (the first tax threshold), which equals $8,003.85.</p>
       <p>The remaining amount of $1,641 ($55,000 – $53,359) is taxed at 20.5% (the next tax threshold), which equals $336.41. </p>
       <p>The federal tax Ellis owes is $8,340.26 ($8,003.85 + $336.41). </p>
-      <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
-        <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$55,000 (Taxable income)</span></li>
-        <li><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv">minus </span></span><span class="h6">$53,359 (Base amount)</span> </li>
-        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$1,641</span></li>
-        <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">20.5% (Tax rate)</span></li>
-        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$336.41</span></li>
-        <li><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv">plus </span></span><span class="h6">$8,003.85 (Tax on 15%)</span> </li>
-        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$8,340.26</strong> (Total federal tax owed)</span></li>
+        <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
+        <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$49,000 (Taxable income)</span></li>
+        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">minus </span></span><span class="h6">$0 (Base amount)</span> </li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$49,000</span></li>
+        <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">15% (Tax rate)</span></li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$7,350</span></li>
+        <li class="brdr-bttm"><span class="fa-li"><span class="h2">+</span><span class="wb-inv">plus </span></span><span class="h6">$0 (Tax on 15%)</span> </li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$7,350</strong> (Total federal tax owed)</span></li>
       </ul>
+	    <p class="h3">Combined tax rate</p>
+	    <p>Ellis' total tax owing is $11,354.29</p>
+	     <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
+        <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$8,340.26 (Federal tax owed)</span></li>
+        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">plus</span></span><span class="h6">$3,014.03 (Provincial tax owed)</span> </li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$11,354.29</strong></span></li>
+	     </ul>
     </details>
     <details>
       <summary class="max-content">Example 2 - Calculation for 2023 combined tax rate (on taxable income of $67,000)</summary>
