--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -178,22 +178,24 @@
 </script--></div>
   <div class="mwsbodytext text parbase section">
     <h2 id="toc1">2023 - Federal rates</h2>
-	    <p>Identify your taxable income threshold.</p> 
+	    <p>Identify your taxable income threshold (tax bracket).</p> 
 	  <p>Taxable income is your income after various deductions, credits, and exemptions have been applied. It is line 26000 of your Income Tax and Benefit Return.</p>
+	  
 	  <details>
 		  <summary class="max-content">If your taxable income is below $15,000 (basic personal amount)</summary>
 		  <p>The basic personal amount (BPA) is $15,000 for the 2023 tax year, and indexed for inflation for subsequent years.</p>
 		  <p>The BPA is a non-refundable tax credit that can be claimed by all individuals. The purpose of the BPA is to provide a <strong>full reduction</strong> from federal income tax to all individuals with taxable income <strong>below</strong> the BPA. It also provides a partial reduction to taxpayers with taxable income above the BPA.</p>
 	  </details>
     <br>
-	  <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/adjustment-personal-income-tax-benefit-amounts.html">How amounts are indexed to inflation</a></p>
-
 	
-    <br>
+	
+   
   </div>
   <div class="mwsgeneric-base-html parbase section">
     <div data-json-replace="#[income-tax-rates]/federalRates/variations/2023/value"> </div>
      </div>
+	 <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/adjustment-personal-income-tax-benefit-amounts.html">How amounts are indexed to inflation</a></p>
+
   <div class="mwsbodytext text parbase section">
     <h2 id="toc2">2023 - Provincial and territorial rates</h2>
     <p>Provincial and territorial tax rates vary across Canada.</p>
