--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -184,7 +184,8 @@
 	  <details>
 		  <summary class="max-content">If your taxable income is below $15,000 (basic personal amount)</summary>
 		  <p>The basic personal amount (BPA) is $15,000 for the 2023 tax year, and indexed for inflation for subsequent years.</p>
-		  <p>The BPA is a non-refundable tax credit that can be claimed by all individuals. The purpose of the BPA is to provide a <strong>full reduction</strong> from federal income tax to all individuals with taxable income <strong>below</strong> the BPA. It also provides a partial reduction to taxpayers with taxable income above the BPA.</p>
+		  <p>The purpose of the BPA is to provide a <strong>full reduction</strong> from federal income tax to all individuals with taxable income <strong>below</strong> the BPA.</p>
+		  <p>The BPA is a non-refundable tax credit that can be claimed by all individuals. It also provides a partial reduction to taxpayers with taxable income above the BPA.</p>
 	  </details>
     <br>
 	
