--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -183,7 +183,7 @@
 	  
 	  <details>
 		  <summary class="max-content">If your taxable income is below $15,000 (basic personal amount)</summary>
-		  <p>The basic personal amount (BPA) is $15,000 for the 2023 tax year, and indexed for inflation for subsequent years.</p>
+		  <p>The basic personal amount (BPA) is $15,000 for the 2023 tax year, and indexed to inflation for subsequent years.</p>
 		  <p>The purpose of the BPA is to provide a <strong>full reduction</strong> from federal income tax to all individuals with taxable income <strong>below</strong> the BPA.</p>
 		  <p>The BPA is a non-refundable tax credit that can be claimed by all individuals. It also provides a partial reduction to taxpayers with taxable income above the BPA.</p>
 	  </details>
@@ -364,6 +364,9 @@
         <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$8,340.26</strong> (Total federal tax owed)</span></li>
       </ul>
     </details>
+
+
+	  
     <h2 id="toc4">Tax rates for previous years</h2>
     <p>Select the tax year to see the federal rate, then select the province or territory to see its rate.</p>
     <details>
@@ -371,7 +374,6 @@
       <div class="mwsgeneric-base-html parbase section">
         <div data-json-replace="#[income-tax-rates]/federalRates/variations/2022/value"> </div>
         <h3>Provincial and territorial rates</h3>
-
 
 <div class="wb-frmvld fieldflow-lg max-content">
       <form>
@@ -517,6 +519,7 @@
       </div>
     </details>
   </div>
+	
   <div class="mwsgeneric-base-html parbase section">
     <div id="incomerates-loader" data-wb-jsonmanager="{&quot;url&quot;: &quot;https://www.canada.ca/api/assets/cra-arc/content-fragments/income-tax-rates#/properties/elements&quot;, &quot;name&quot;: &quot;incomerates&quot;}"></div>
     <div class="hidden" id="table-cont"> <span data-json-replace="#[incomerates]/value"></span> </div>
