--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -337,9 +337,9 @@
 
     </details>
 <br>
- <p>[Step 5 of the Income Tax and Benefit Return is where to calculate your federal tax on taxable income. Federal non-refundable tax credits are also calculated on this return.]</p>
-    <p>[Form 428 within your respective province or territory’s income tax package, is used to calculate your provincial or territorial tax. Provincial or territorial non-refundable tax credits are also calculated on Form 428.]</p>
-    <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html">[T1 Income tax packages]</a></p>
+ <p>Step 5 of the Income Tax and Benefit Return is where to calculate your federal tax on taxable income. Federal non-refundable tax credits are also calculated on this return.</p>
+    <p>Form 428 within your respective province or territory’s income tax package, is used to calculate your provincial or territorial tax. Provincial or territorial non-refundable tax credits are also calculated on Form 428.</p>
+    <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html">T1 Income tax packages</a></p>
    
 	  
     <h2 id="toc4">Tax rates for previous years</h2>
