--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -415,7 +415,7 @@
 	    
     </details>
     <details>
-      <summary>2021</summary>
+      <summary class="mid-content">2021</summary>
       <div data-json-replace="#[income-tax-rates]/federalRates/variations/2021/value"> </div>
      <div class="wb-frmvld fieldflow-lg max-content">
       <form>
