--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -131,8 +131,8 @@
   </div>
   <div class="mwsbodytext text parbase section">
     <p>The Government of Canada sets the federal income tax rates for individuals. Each province and territory determines their own income tax rates.</p>
-    <p>Provincial or territorial income tax rates apply <strong>in addition to</strong> federal income tax rates.</p>
-    <p>Determine the total tax you will pay by identifying your taxable income threshold (tax bracket), using the different tax rates based on your location, and calculating your combined tax rate.</p>
+    <p>Provincial and territorial income tax rates apply <strong>in addition to</strong> federal income tax rates.</p>
+    <p>Determine the total income tax you will pay by identifying your taxable income threshold (tax bracket), using the different tax rates based on your location, and calculating your combined tax rate.</p>
   
   </div>
   <div class="mwsinpagetoc section">
@@ -195,7 +195,7 @@
   <div class="mwsgeneric-base-html parbase section">
     <div data-json-replace="#[income-tax-rates]/federalRates/variations/2023/value"> </div>
      </div>
-	 <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/adjustment-personal-income-tax-benefit-amounts.html">How amounts are indexed to inflation</a></p>
+	 <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/adjustment-personal-income-tax-benefit-amounts.html" target="_blank">How amounts are indexed to inflation</a></p>
 
   <div class="mwsbodytext text parbase section">
     <h2 id="toc2">2023 - Provincial and territorial rates</h2>
@@ -291,8 +291,47 @@
     </div>
     <details>
       <summary class="max-content">Example 1 - Calculation for 2023 combined tax rate (on taxable income of $52,000)</summary>
-      <p>In <strong>2023</strong>, Ellis lives in <strong>Ontario</strong> and has a taxable income of <strong>$49,000</strong>. Ellis’ tax calculation would be as follows:</p>
+      <p>In <strong>2023</strong>, Ellis lives in <strong>Ontario</strong> and has a taxable income of <strong>$52,000</strong>. Ellis’ tax calculation would be as follows:</p>
       <p class="h3">Federal tax</p>
+      <p>$52,000 is taxed at 15% (the first tax threshold), which equals $7,800.</p>
+      <p>The calculation cannot result in a negative number ($52,000 – $53,359 = -$1,359). If it does, the base amount is "0". </p>
+      <p>The federal tax Ellis owes is $7,800 ($7,800 + $0). </p>
+      <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
+        <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$52,000 (Taxable income)</span></li>
+        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">minus </span></span><span class="h6">$0 (Base amount)</span> </li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$52,000</span></li>
+        <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">15% (Tax rate)</span></li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$7,800</span></li>
+        <li class="brdr-bttm"><span class="fa-li"><span class="h2">+</span><span class="wb-inv">plus </span></span><span class="h6">$0 (Tax on 15%)</span> </li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$7,800</strong> (Total federal tax owed)</span></li>
+      </ul>
+      <p class="h3">Provincial tax</p>
+      <p>The first $53,359 is taxed at 15% (the first tax threshold), which equals $8,003.85.</p>
+      <p>The remaining amount of $1,641 ($55,000 – $53,359) is taxed at 20.5% (the next tax threshold), which equals $336.41. </p>
+      <p>The federal tax Ellis owes is $8,340.26 ($8,003.85 + $336.41). </p>
+        <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
+        <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$49,000 (Taxable income)</span></li>
+        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">minus </span></span><span class="h6">$0 (Base amount)</span> </li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$49,000</span></li>
+        <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">15% (Tax rate)</span></li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$7,350</span></li>
+        <li class="brdr-bttm"><span class="fa-li"><span class="h2">+</span><span class="wb-inv">plus </span></span><span class="h6">$0 (Tax on 15%)</span> </li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$7,350</strong> (Total federal tax owed)</span></li>
+      </ul>
+	    <p class="h3">Combined tax rate</p>
+	    <p>Ellis' total tax owing is $11,354.29</p>
+	     <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
+        <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$8,340.26 (Federal tax owed)</span></li>
+        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">plus</span></span><span class="h6">$3,014.03 (Provincial tax owed)</span> </li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$11,354.29</strong></span></li>
+	     </ul>
+    </details>
+
+	  
+    <details>
+      <summary class="max-content">Example 2 - Calculation for 2023 combined tax rate (on taxable income of $79,000)</summary>
+      <p>In <strong>2023</strong>, Amari lives in <strong>Nova Scotia</strong> and has a taxable income of <strong>$67,000</strong>. Amari’s tax calculation would be as follows:</p>
+  <p class="h3">Federal tax</p>
       <p>$49,000 is taxed at 15% (the first tax threshold), which equals $7,350.</p>
       <p>The calculation cannot result in a negative number ($49,000 – $53,359 = -$4,359). If it does, the base amount is "0". </p>
       <p>The federal tax Ellis owes is $7,350 ($7,350 + $0). </p>
@@ -326,11 +365,8 @@
         <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$11,354.29</strong></span></li>
 	     </ul>
     </details>
-    <details>
-      <summary class="max-content">Example 2 - Calculation for 2023 combined tax rate (on taxable income of $79,000)</summary>
-      <p>In 2023, Amari lives in Nova Scotia and has a taxable income of $67,000. Amari’s tax calculation would be as follows:</p>
 
-    </details>
+	  
     <details>
       <summary class="max-content">Example 3 - Calculation for 2023 combined tax rate (on taxable income of $108,000)</summary>
       <p>In 2023, Quinn lives in Alberta and has a taxable income of $110,000. Quinn’s tax calculation would be as follows:</p>
@@ -338,8 +374,8 @@
     </details>
 <br>
  <p>Step 5 of the Income Tax and Benefit Return is where to calculate your federal tax on taxable income. Federal non-refundable tax credits are also calculated on this return.</p>
-    <p>Form 428 within your respective province or territory’s income tax package, is used to calculate your provincial or territorial tax. Provincial or territorial non-refundable tax credits are also calculated on Form 428.</p>
-    <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html">T1 Income tax packages</a></p>
+    <p>Form 428 within your respective province or territory’s income tax package is used to calculate your provincial or territorial tax on taxable income. Provincial and territorial non-refundable tax credits are also calculated on Form 428.</p>
+    <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html" target="_blank">T1 Income tax packages</a></p>
    
 	  
     <h2 id="toc4">Tax rates for previous years</h2>
