--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -271,7 +271,7 @@
       <div class="col-sm-6 col-md-5">
         <p class="h3">To calculate the tax:</p>
 <ol class="lst-spcd">
-    <li>Subtract the base amount from the taxable income</li>
+    <li>Subtract the taxable income from the base amount</li>
     <li>Multiply that result by the tax rate</li>
     <li>Add that result to the tax</li>
   </ol>
