--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -271,7 +271,7 @@
       <div class="col-sm-6 col-md-5">
         <p class="h3">To calculate the tax:</p>
 <ol class="lst-spcd">
-    <li>Subtract the taxable income from the base amount</li>
+    <li>Subtract the taxable income from the base amount of the tax threshold</li>
     <li>Multiply that result by the tax rate</li>
     <li>Add that result to the tax</li>
   </ol>
@@ -280,7 +280,7 @@
       <div class="col-sm-6 col-md-7">
         <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
           <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="text-muted h5">Taxable income</span></li>
-          <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-minus fa-lg"></span><span class="wb-inv">minus </span></span><span class="text-muted h5">Base amount</span> </li>
+          <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-minus fa-lg"></span><span class="wb-inv">minus </span></span><span class="text-muted h5">Base amount of the tax threshold</span> </li>
           <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">($)</span></li>
           <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Tax rate</span></li>
           <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">($)</span></li>
@@ -293,9 +293,12 @@
       <summary class="max-content">Example 1 - Calculation for 2023 combined tax rate (on taxable income of $52,000)</summary>
       <p>In <strong>2023</strong>, Ellis lives in <strong>Ontario</strong> and has a taxable income of <strong>$52,000</strong>. Ellis’ tax calculation would be as follows:</p>
       <p class="h3">Federal tax</p>
-      <p>$52,000 is taxed at 15% (the first tax threshold), which equals $7,800.</p>
-      <p>The calculation cannot result in a negative number ($52,000 – $53,359 = -$1,359). If it does, the base amount is "0". </p>
-      <p>The federal tax Ellis owes is $7,800 ($7,800 + $0). </p>
+	    
+      <p>$52,000 is subtracted from $53,359 ($52,000 – $53,359 = -$1,359). </p>
+      <p>The calculation cannot result in a negative number. If it does, the base amount is "0". </p>
+      <p>$52,000 is taxed at 15% (the first tax threshold), which equals $7,800. </p>
+	    <p>Since the base amount is “0”, there is no tax on the tax rate. </p>
+	    <p>The federal tax Ellis owes is $7,800. </p>
       <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
         <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$52,000 (Taxable income)</span></li>
         <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">minus </span></span><span class="h6">$0 (Base amount)</span> </li>
@@ -305,6 +308,8 @@
         <li class="brdr-bttm"><span class="fa-li"><span class="h2">+</span><span class="wb-inv">plus </span></span><span class="h6">$0 (Tax on 15%)</span> </li>
         <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$7,800</strong> (Total federal tax owed)</span></li>
       </ul>
+
+	    
       <p class="h3">Provincial tax</p>
       <p>The first $53,359 is taxed at 15% (the first tax threshold), which equals $8,003.85.</p>
       <p>The remaining amount of $1,641 ($55,000 – $53,359) is taxed at 20.5% (the next tax threshold), which equals $336.41. </p>
