--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -273,7 +273,7 @@
 <ol class="lst-spcd">
     <li>Subtract the taxable income from the base amount of the tax threshold</li>
     <li>Multiply that result by the tax rate</li>
-    <li>Add that result to the tax</li>
+    <li>Add that result to the tax amount on the tax rate</li>
   </ol>
  
       </div>
@@ -284,7 +284,7 @@
           <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">($)</span></li>
           <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Tax rate</span></li>
           <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">($)</span></li>
-          <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-plus fa-lg"></span><span class="wb-inv">plus </span></span><span class="text-muted h5">Tax amount on tax rate</span> </li>
+          <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-plus fa-lg"></span><span class="wb-inv">plus </span></span><span class="text-muted h5">Tax amount on the tax rate</span> </li>
           <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">Tax owed</span><span class="fa-stack text-success pull-right"><span class="fas fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span></span></li>
         </ul>
       </div>
